--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-[#0a192f]">
     <header class="glass-effect fixed top-0 left-0 right-0 z-50 transition-all duration-300">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="text-xl font-bold text-white">NW<span class="text-[#00f2a1]">.</span></a>
-            <div class="hidden md:flex items-center space-x-8">
-                <a href="#about" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="About" data-ko="소개">About</a>
-                <a href="#skills" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Skills" data-ko="기술">Skills</a>
-                <a href="#experience" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Experience" data-ko="경력">Experience</a>
-                <a href="#projects" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Projects" data-ko="프로젝트">Projects</a>
-                <a href="https://kloudschool.com" target="_blank" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Blog" data-ko="블로그">Blog</a>
-                <a href="#contact" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Contact" data-ko="연락처">Contact</a>
-            </div>
-            <div class="flex items-center">
-                <button id="lang-toggle" class="bg-[#00f2a1] text-[#0a192f] font-bold py-1 px-3 rounded-md text-sm">KO</button>
+            
+            <div class="flex items-center space-x-8">
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="#about" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="About" data-ko="소개">About</a>
+                    <a href="#skills" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Skills" data-ko="기술">Skills</a>
+                    <a href="#experience" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Experience" data-ko="경력">Experience</a>
+                    <a href="#projects" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Projects" data-ko="프로젝트">Projects</a>
+                    <a href="https://kloudschool.com" target="_blank" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Blog" data-ko="블로그">Blog</a>
+                    <a href="#contact" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Contact" data-ko="연락처">Contact</a>
+                </div>
+    
+                <div>
+                    <button id="lang-toggle" class="bg-[#00f2a1] text-[#0a192f] font-bold py-1 px-3 rounded-md text-sm ml-auto md:ml-0">KO</button>
+                </div>
             </div>
         </nav>
     </header>
@@ -40,8 +44,8 @@
                  <img src="niwantha.png" alt="Niwantha Wickramasingha" class="w-full h-full object-cover hexagon">
             </div>
             <h1 class="text-4xl md:text-6xl font-bold text-white mb-2" data-en="Hello, I'm" data-ko="안녕하세요, 저는">Hello, I'm</h1>
-            <h2 class="text-5xl md:text-7xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00f2a1] to-[#00c6ff] mb-4">NIWANTHA WICKRAMASINGHA</h2>
-            <h3 id="hero-subtitle" class="text-xl md:text-2xl text-gray-300 mb-8" data-en="Cloud Engineer & Microsoft Certified Trainer" data-ko="클라우드 엔지니어 & Microsoft 공인 트레이너">Cloud Engineer & Microsoft Certified Trainer</h3>
+            <h2 class="text-3xl sm:text-5xl md:text-7xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00f2a1] to-[#00c6ff] mb-4 break-words">NIWANTHA WICKRAMASINGHA</h2>
+            <h3 id="hero-subtitle" class="text-lg sm:text-xl md:text-2xl text-gray-300 mb-8" data-en="Cloud Engineer & Microsoft Certified Trainer" data-ko="클라우드 엔지니어 & Microsoft 공인 트레이너">Cloud Engineer & Microsoft Certified Trainer</h3>
             <div class="flex items-center space-x-6">
                 <a href="mailto:niwanthawick@outlook.com" class="bg-gradient-to-r from-[#00f2a1] to-[#00c6ff] text-[#0a192f] font-bold py-3 px-8 rounded-md hover:scale-105 transition-transform" data-en="Let's Talk" data-ko="이야기하기">Let's Talk</a>
                 <a href="https://linkedin.com/in/niwantha-wickramasingha" target="_blank" class="text-2xl hover:text-[#00f2a1] transition-colors"><i class="fab fa-linkedin"></i></a>
@@ -95,9 +99,9 @@
 
         <section id="experience" class="py-20 fade-in-section">
             <h2 class="text-4xl font-bold text-center mb-12" data-en="Career Journey" data-ko="경력">Career Journey</h2>
-            <div class="max-w-4xl mx-auto relative border-l-2 border-[#00f2a1]/30 pl-10">
+            <div class="max-w-4xl mx-auto relative border-l-2 border-[#00f2a1]/30 pl-8 md:pl-10">
                 <div class="timeline-item mb-8 relative">
-                    <div class="absolute -left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
+                    <div class="absolute -left-[38px] md:-left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
                     <div class="timeline-trigger cursor-pointer flex justify-between items-center">
                         <div>
                             <p class="text-sm text-gray-400 mb-1" data-en="Nov 2024 - Present" data-ko="2024년 11월 - 현재">Nov 2024 - Present</p>
@@ -132,7 +136,7 @@
                     </div>
                 </div>
                 <div class="timeline-item mb-8 relative">
-                    <div class="absolute -left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
+                    <div class="absolute -left-[38px] md:-left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
                     <div class="timeline-trigger cursor-pointer flex justify-between items-center">
                         <div>
                             <p class="text-sm text-gray-400 mb-1" data-en="Sep 2023 - Aug 2024" data-ko="2023년 9월 - 2024년 8월">Sep 2023 - Aug 2024</p>
@@ -161,13 +165,12 @@
                                     <li>✅ Proficiently oversaw Kubernetes and Docker administration, enhancing system efficiency.</li>
                                     <li>✅ Delivering technical trainings with clear guidance and hands-on support.</li>
                                     </ul>
-
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="timeline-item mb-8 relative">
-                    <div class="absolute -left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
+                    <div class="absolute -left-[38px] md:-left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
                     <div class="timeline-trigger cursor-pointer flex justify-between items-center">
                         <div>
                             <p class="text-sm text-gray-400 mb-1" data-en="Nov 2022 - Apr 2023" data-ko="2022년 11월 - 2023년 4월">Nov 2022 - Apr 2023</p>
@@ -195,7 +198,7 @@
                     </div>
                 </div>
                 <div class="timeline-item relative">
-                    <div class="absolute -left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
+                    <div class="absolute -left-[38px] md:-left-[46px] top-1 w-4 h-4 rounded-full bg-[#00f2a1] border-4 border-[#0a192f]"></div>
                     <div class="timeline-trigger cursor-pointer flex justify-between items-center">
                         <div>
                             <p class="text-sm text-gray-400 mb-1" data-en="Aug 2021 - Oct 2022" data-ko="2021년 8월 - 2022년 10월">Aug 2021 - Oct 2022</p>
@@ -318,7 +321,6 @@
                         <p>🔗 Project Code Repo: GitLab - <a href="https://lnkd.in/g3XbG2G3" target="_blank" class="text-[#00f2a1]">https://lnkd.in/g3XbG2G3</a></p>
                     </div>
                 </div>
-
                 </div>
         </section>
 
