--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#home" class="text-xl font-bold text-white">NW<span class="text-[#00f2a1]">.</span></a>
             
-            <div class="flex items-center space-x-8">
+            <div class="flex items-center">
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="#about" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="About" data-ko="소개">About</a>
                     <a href="#skills" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Skills" data-ko="기술">Skills</a>
@@ -31,8 +31,11 @@
                     <a href="#contact" class="nav-link hover:text-[#00f2a1] transition-colors" data-en="Contact" data-ko="연락처">Contact</a>
                 </div>
     
-                <div>
-                    <button id="lang-toggle" class="bg-[#00f2a1] text-[#0a192f] font-bold py-1 px-3 rounded-md text-sm ml-auto md:ml-0">KO</button>
+                <div class="flex items-center space-x-4 ml-4 md:ml-8">
+                    <a href="https://kloudschool.com" target="_blank" class="mobile-blog-icon md:hidden">
+                        <i class="fas fa-globe"></i>
+                    </a>
+                    <button id="lang-toggle" class="bg-[#00f2a1] text-[#0a192f] font-bold py-1 px-3 rounded-md text-sm">KO</button>
                 </div>
             </div>
         </nav>
@@ -40,8 +43,8 @@
 
     <main class="container mx-auto px-6">
         <section id="home" class="min-h-screen flex flex-col justify-center items-center text-center">
-            <div class="w-48 h-48 sm:w-56 sm:h-56 hexagon-glow mb-6">
-                 <img src="niwantha.png" alt="Niwantha Wickramasingha" class="w-full h-full object-cover hexagon">
+            <div class="w-48 h-48 sm:w-56 sm:h-56 gemini-glow-circle mb-6">
+                 <img src="niwantha.png" alt="Niwantha Wickramasingha" class="profile-picture">
             </div>
             <h1 class="text-4xl md:text-6xl font-bold text-white mb-2" data-en="Hello, I'm" data-ko="안녕하세요, 저는">Hello, I'm</h1>
             <h2 class="text-3xl sm:text-5xl md:text-7xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-[#00f2a1] to-[#00c6ff] mb-4 break-words">NIWANTHA WICKRAMASINGHA</h2>
