--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-[#0a192f] theme-light">
+<body class="theme-dark developer-surface">
     <header class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 py-3">
         <nav class="mx-auto w-11/12 max-w-6xl px-6 py-5 flex justify-between items-center rounded-xl glass-header">
             <a href="#home" class="text-xl font-bold text-white brand-mark">NW<span class="text-[#00f2a1] brand-dot">.</span></a>
@@ -35,9 +35,6 @@
                     <a href="https://kloudschool.com" target="_blank" class="mobile-blog-icon md:hidden">
                         <i class="fas fa-globe"></i>
                     </a>
-                    <button id="theme-toggle" aria-label="Toggle theme" class="theme-toggle-btn flex items-center justify-center text-sm font-bold rounded-md">
-                        <i class="fas fa-moon"></i>
-                    </button>
                     <button id="lang-toggle" class="bg-[#00f2a1] text-[#0a192f] font-bold py-1 px-3 rounded-md text-sm">한국어</button>
                 </div>
             </div>
