change to github action

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <span>DevOps Engineer Expert</span>
                 </div>
                 <div class="cert-card reflection-effect">
-                    <img class="cert-icon" src="cert-png/Terraform Associate (003).png" alt="Terraform Associate (003)">
-                    <span>Terraform Associate (003)</span>
+                    <img class="cert-icon" src="cert-png/Github action.png" alt="Github action">
+                    <span>Github action</span>
                 </div>
 
                 <!-- Second row -->
