add educational section

--- a/index.html
+++ b/index.html
@@ -82,10 +82,45 @@
             </div>
         </section>
 
+        <section id="education" class="py-20 fade-in-section">
+            <h2 class="text-4xl font-bold text-center mb-12" data-en="Education" data-ko="교육">Education</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto">
+                
+                <div class="cert-card reflection-effect">
+                    <div class="w-14 h-14 flex-shrink-0 flex items-center justify-center">
+                        <i class="fas fa-graduation-cap text-4xl text-[#00f2a1]"></i>
+                    </div>
+                    <div>
+                        <span class="block font-semibold">B.Eng (Hons) Computer Network (2nd Upper)</span>
+                        <span class="block text-sm text-gray-400">Metropoliton University, London</span>
+                    </div>
+                </div>
+
+                <div class="cert-card reflection-effect">
+                    <div class="w-14 h-14 flex-shrink-0 flex items-center justify-center">
+                        <i class="fas fa-graduation-cap text-4xl text-[#00f2a1]"></i>
+                    </div>
+                    <div>
+                        <span class="block font-semibold">HND In Network Engineering</span>
+                        <span class="block text-sm text-gray-400">Pearson, United Kingdom</span>
+                    </div>
+                </div>
+
+                <div class="cert-card reflection-effect">
+                    <div class="w-14 h-14 flex-shrink-0 flex items-center justify-center">
+                        <i class="fas fa-graduation-cap text-4xl text-[#00f2a1]"></i>
+                    </div>
+                    <div>
+                        <span class="block font-semibold">Diploma In Information Technology</span>
+                        <span class="block text-sm text-gray-400">Pearson, United Kingdom</span>
+                    </div>
+                </div>
+
+            </div>
+        </section>
         <section id="certifications" class="py-20 fade-in-section">
             <h2 class="text-4xl font-bold text-center mb-12" data-en="Certifications" data-ko="자격증">Certifications</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto">
-                <!-- First row -->
                 <div class="cert-card reflection-effect">
                     <img class="cert-icon" src="cert-png/Azure Solutions Architect Expert.png" alt="Azure Solutions Architect Expert">
                     <span>Azure Solutions Architect Expert</span>
@@ -99,7 +134,6 @@
                     <span>Github action</span>
                 </div>
 
-                <!-- Second row -->
                 <div class="cert-card reflection-effect">
                     <img class="cert-icon" src="cert-png/Azure Administrator.png" alt="Azure Administrator Associate">
                     <span>Azure Administrator Associate</span>
@@ -113,7 +147,6 @@
                     <span>Azure Virtual Desktop Specialty</span>
                 </div>
 
-                <!-- Third row -->
                 <div class="cert-card reflection-effect">
                     <img class="cert-icon" src="cert-png/Teams Administrator Associate.png" alt="Teams Administrator Associate">
                     <span>Teams Administrator Associate</span>
@@ -127,7 +160,6 @@
                     <span>Security, Compliance, and Identity Fundamentals</span>
                 </div>
 
-                <!-- Fourth row -->
                 <div class="cert-card reflection-effect">
                     <img class="cert-icon" src="cert-png/Google IT Support Professional Certificate.png" alt="Google IT Support Professional Certificate">
                     <span>Google IT Support Professional Certificate</span>
